Add placeholder for win32 install
For some unknown reason the continous integration tests fail.
Maybe for something unrelated. But to be sure, the install rule will be active
if target is Linux and not win32.

Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/src/libproxy/CMakeLists.txt
+++ b/bld/src/libproxy/CMakeLists.txt
@@ -285,6 +285,8 @@ if(${use_openssl})
     target_link_libraries(libproxy-static PUBLIC ${OPENSSL_LIBRARIES})
 endif()
 
-if(LINUX)
+if(WIN32)
+  # Place here the install rule for win32
+elseif(LINUX)
 	install (TARGETS libproxy LIBRARY DESTINATION lib )
 endif()
