--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ env:
     - proxy=no_zlog build_args=""
 language: c
 compiler: gcc
-dotnet: 1.0.0-preview2-003121
+install:
+  - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list' 
+  - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
+  - sudo apt-get update
+  - sudo apt-get install dotnet-dev-1.0.0-preview2-003121 -y
 script: "bash bld/build.sh -c $build_args"
