Use the libwebsocket which is provided as sub module of the shared sub module
In the past the deps/lws sub module was pinned to another commit
than the deps/shared/deps/libwebsockets submodule.
So that some important modification were missing.
Therefore only one source tree of libwebsockets should be checked out.
- > The one of the shared sub module.


Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/bld/CMakeLists.txt
+++ b/bld/CMakeLists.txt
@@ -33,7 +33,7 @@ set(_HASHTABLE_ROOT ${_DEPS_ROOT}/hashtable CACHE PATH "Hashtable Root")
 set(_UAMQP_ROOT ${_DEPS_ROOT}/uamqp CACHE PATH "Azure uAMQP Root")
 set(_UMQTT_ROOT ${_DEPS_ROOT}/umqtt CACHE PATH "Azure uMQTT Root")
 set(_SHARED_ROOT ${_DEPS_ROOT}/shared CACHE PATH "Azure C Shared Root")
-set(_LIBWEBSOCKETS_ROOT ${_DEPS_ROOT}/lws CACHE PATH "Libwebsockets Root")
+set(_LIBWEBSOCKETS_ROOT ${_SHARED_ROOT}/deps/libwebsockets CACHE PATH "Libwebsockets Root")
 set(_UMOCKC_ROOT ${_DEPS_ROOT}/umock CACHE PATH "Azure uMock C Root")
 set(_TRUNNER_ROOT ${_DEPS_ROOT}/trunner CACHE PATH "Azure test runner Root")
 set(_CTEST_ROOT ${_DEPS_ROOT}/ctest CACHE PATH "Azure ctest harness Root")
