appveyor needs to update the sub-modules of the shared sub-module
Signed-off-by: Juergen Kosel <juergen.kosel@softing.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ environment:
 image: Visual Studio 2015
 install:
   - git submodule update --init
+  - git -C deps/shared submodule update --init
   - appveyor DownloadFile https://libwebsockets.org:444/Win32OpenSSL-1_0_2h.exe
   - Win32OpenSSL-1_0_2h.exe /silent /verysilent /sp- /suppressmsgboxes
 build:
